ApplicationCloudFormationScripts/network.yaml
Parameters:

  ProjectName:
    Description: The udacity project name that will be tags to all the resources
    Type: String

  StudentName:
    Description: Name of the student who created the resources
    Type: String

  ResourcePrefix:
    Description: The code that will be prefixed to all resource names
    Type: String

  VpcCIDR:
    Description: Please enter the IP range (CIDR notation) for this VPC
    Type: String
    Default: 10.0.0.0/16

  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the first Availability Zone
    Type: String
    Default: 10.0.0.0/24

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.0.1.0/24

  PrivateAppSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private application subnet in the first Availability
    Zone
    Type: String
    Default: 10.0.2.0/24

  PrivateAPPSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private application subnet in the Second
    Availability Zone
    Type: String
    Default: 10.0.3.0/24

  PrivateDataSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private data subnet in the first Availability Zone
    Type: String
    Default: 10.0.4.0/24

  PrivateDataSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private data subnet in the first Availability Zone
    Type: String
    Default: 10.0.5.0/24


  whatever you consider a changing value, put it as a parameter instead of hard-coding it into your script
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref ResourcePrefix
        - Key: StudentName
          Value: !Ref StudentName
        - Key: ProjectName
          Value: !Ref ProjectName
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref ResourcePrefix
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref JenkinsSubnet
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ResourcePrefix} Subnet (AZ1)
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PublicSubnet2CIDR
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${ResourcePrefix} Public Subnet (AZ2)
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  PrivateAppSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: !Ref PrivateAppSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourcePrefix} Private App Subnet (AZ1)
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  PrivateAppSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateAppSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourcePrefix} Private App Subnet (AZ2)
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  PrivateDataSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateDataSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourcePrefix} Private Data Subnet (AZ1)
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  PrivateDataSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      CidrBlock: !Ref PrivateDataSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${ResourcePrefix} Private Data Subnet (AZ2)
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName} Public Routes
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  NatGateway1EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway2EIP:
    Type: AWS::EC2::EIP
    DependsOn: InternetGatewayAttachment
    Properties:
      Domain: vpc

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway1EIP.AllocationId
      SubnetId: !Ref PublicSubnet1

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGateway2EIP.AllocationId
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName} Private Routes (AZ1)
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateAppSubnet1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName} Private Routes (AZ2)
        - Key: ProjectName
          Value: !Ref ProjectName
        - Key: StudentName
          Value: !Ref StudentName

#  DefaultPrivateRoute2:
#    Type: AWS::EC2::Route
#    Properties:
#      RouteTableId: !Ref PrivateRouteTable2
#      DestinationCidrBlock: 0.0.0.0/0
#      NatGatewayId: !Ref NatGateway2
#
#  PrivateSubnet2RouteTableAssociation:
#    Type: AWS::EC2::SubnetRouteTableAssociation
#    Properties:
#      RouteTableId: !Ref PrivateRouteTable2
#      SubnetId: !Ref PrivateSubnet2

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub ${ProjectName}-CI-CD-Pipeline

#PublicSubnets:
        ##    Description: A list of the public subnets
        ##    Value: !Join [ ",", [ !Ref PublicSubnet1 ]]
      ##    Export:
      ##      Name: !Sub ${ProjectName}-PUB-NETS

#  PrivateSubnets:
#    Description: A list of the private subnets
#    Value: !Ref PrivateSubnet1 ]]
#    Export:
#      Name: !Sub ${ProjectName}-PRIV-NETS

  PublicSubnet1:
    Description: A reference to the public subnet in the 1st Availability Zone
    Value: !Ref PublicSubnet1
    Export:
      Name: !Sub ${ProjectName}-JENKINS-SN

#  PublicSubnet2:
#    Description: A reference to the public subnet in the 2nd Availability Zone
#    Value: !Ref PublicSubnet2
#    Export:
#      Name: !Sub ${ProjectName}-PUB2-SN

#  PrivateSubnet1:
#    Description: A reference to the private subnet in the 1st Availability Zone
#    Value: !Ref PrivateSubnet1
#    Export:
#      Name: !Sub ${ProjectName}-PRI1-SN

#  PrivateSubnet2:
#    Description: A reference to the private subnet in the 2nd Availability Zone
#    Value: !Ref PrivateSubnet2
#    Export:
#      Name: !Sub ${ProjectName}-PRI2-SN
